change to article template, fix portfolio page, and some align image stuff.

--- a/themes/white-n-green/static/css/mixins.sass
+++ b/themes/white-n-green/static/css/mixins.sass
@@ -21,6 +21,3 @@
 
 @mixin align-copy
   max-width: 40% !important 
-  
-  margin-right: 2% !important 
-  margin-left: none !important
