--- a/themes/white-n-green/static/css/styles.sass
+++ b/themes/white-n-green/static/css/styles.sass
@@ -117,11 +117,15 @@ nav
 
 .alignleft
   @include align-copy
-  float: left 
+  float: left
+  margin-right: 0px !important 
+  margin-left: 2% !important
 
 .alignright
   @include align-copy
   float: right 
+  margin-right: 2% !important 
+  margin-left: 0px !important
   
 .aligncenter, .alignnone 
   max-width: 100% 
